Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-5280

exclusivity of queue not enforced for bind/unbind

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • 0.24
    • 0.25
    • C++ Broker
    • None

    Description

      An exclusive queue can be bound or unbound by any other session. The property is really that defined by the 0-10 spec which says that an exclusive queue can not be 'used' by anyone else. There is no precise definition of what 'use' means here (we deliberately allowed browsing some time back), but binding and unbinding certainly seems to count as using since it affects the stream of messages an exclusive consumer may see.

      Attachments

        Activity

          People

            gsim Gordon Sim
            gsim Gordon Sim
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: